change bg color

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body {
   background-image: linear-gradient(to right, #034378, #2d4e68);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: red;
   height: 100vh;
   font-family: "Open Sans", sans-serif;
   
