change phone number

--- a/css/receipt.css
+++ b/css/receipt.css
@@ -4,7 +4,7 @@
   background-color: #F6F6F6; 
 }
 .brandSection{
-  background-color: #3B99B3;
+  background-color: rgb(9, 7, 129);
   border:1px solid #417482;
 }
 .headerLeft h1{
