--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ a {
 h1 {
   font-family: "Open Sans", sans-serif;
   font-weight: 300;
- color: green; 
+ color: light green; 
  height: 56px;
 }
 
