--- a/css/bootstrap-dropdownhover.css
+++ b/css/bootstrap-dropdownhover.css
@@ -3,7 +3,7 @@
  */
 .dropdown .dropdown-menu .caret {
 	border: 4px solid transparent;
-	border-left-color: #000;
+	border-left-color: #FFFFFF;
 	float: right;
 	margin-top: 6px;
 } 
