--- a/css/style1.css
+++ b/css/style1.css
@@ -12,7 +12,7 @@ body {
 	padding: 19px 29px 29px;
 	margin: 0 auto;
 	background-color: #fff;	
-	border: 1px solid #e5e5e5;
+	border: 1px solid #b9b0b0;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	border-radius: 5px;
@@ -20,7 +20,7 @@ body {
 	-moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
 	box-shadow: 0 1px 2px rgba(0,0,0,.05);			
 	font-family:Tahoma, Geneva, sans-serif;
-	color:#990000;
+	color:#a30909;
 	font-weight:lighter;
 }
 .form-login .form-login-heading {
